sumo/tests/dfrouter/errors/no_detector_files/Makefile.am
EXTRA_DIST =  errors.dfrouter.exe input_net.net.xml options.dfrouter \
output.dfrouter.exe

